修正登录参数 （1）更新SinglePost.html中的POST参数； （2）取消登录/登出按钮的submit属性（参见http://www.educity.cn/wenda/121769.html）；

--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -61,7 +61,7 @@
 <?php 
 if (isset($_SESSION['SysID'])){
 ?>
-            <form id="postForm" name="postForm" method="post" action="<?php echo $act;?>">
+            <form id="postForm" name="postForm" method="post" action="?">
                 <input class="do-post-name-input-field" name="title" id="title" value="" />
                 <textarea class="do-post-text-input-field" id="editor_1" name="content"></textarea>
                 <input id="content_1" type="hidden" value="" />
