give page requirement

--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -45,13 +45,13 @@
 
         <div class="turn-page">
             <ul>
-                <li class="page"><a href="">1</a></li>
-                <li class="page"><a href="">2</a></li>
-                <li class="page"><a href="">3</a></li>
-                <li class="page"><a href="">4</a></li>
+                <li class="page"><a href="?page=1">1</a></li>
+                <li class="page"><a href="?page=2">2</a></li>
+                <li class="page"><a href="?page=3">3</a></li>
+                <li class="page"><a href="?page=4">4</a></li>
                 <li class="page"><a href="">...</a></li>
-                <li class="page"><a href="">7</a></li>
-                <li class="page"><a href="">8</a></li>
+                <li class="page"><a href="?page=7">7</a></li>
+                <li class="page"><a href="?page=8">8</a></li>
             </ul>
         </div>
 
