在贴子列表中显示有关贴子的信息

--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -31,6 +31,7 @@
 		    <?php
 		      echo $post_list[$i-1]['Title'];
 		    ?>
+		    <i>由 <?php echo $post_list[$i-1]['AuthorName'];?> 发布于 <?php echo $post_list[$i-1]['Time'];?></i>
 		  </a>
 		</li>
               </ul>
