修正复制粘贴导致的BUG

--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -11,7 +11,7 @@
         	?>
             <li class="post-reply-field">
                 <span><?php echo $i; ?>楼</span>
-                <span><?php echo $post_list[0]['AuthorName'];?> <?php echo $post_list[0]['Time'];?></span>
+                <span><?php echo $post_list[$i]['AuthorName'];?> <?php echo $post_list[$i]['Time'];?></span>
                 <br />
                 <?php echo $post_list[$i]['PostAdd']; ?>  
             </li>
