统一帖子列表和回复列表的函数调用；增加回复列表分页功能

--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -20,9 +20,9 @@
             ?>
         </ul>
         <ul>
-            <li class="post-page"><a href="">1</a></li>
-            <li class="post-page"><a href="">2</a></li>
-            <li class="post-page"><a href="">3</a></li>
+            <li class="post-page"><a href="?action=postView&PostID=<?php echo $post_list[0]['PostID'];?>&replyPage=1">1</a></li>
+            <li class="post-page"><a href="?action=postView&PostID=<?php echo $post_list[0]['PostID'];?>&replyPage=2">2</a></li>
+            <li class="post-page"><a href="?action=postView&PostID=<?php echo $post_list[0]['PostID'];?>&replyPage=3">3</a></li>
         </ul>
 <?php 
 	if (isset($_SESSION['SysID'])){
