--- a/src/include/template/css/stylesheet-newOpen.css
+++ b/src/include/template/css/stylesheet-newOpen.css
@@ -1,22 +1,20 @@
-﻿body
-{
-    width:1366px;
+﻿#container{
+	width:1340px;
 }
 
 /*以下是logo部分*/
 
 .logo-field {
     background-color:rgb(200,255,200);
-    height:300px;
-    width:1349px;
-    margin-left:10px;
-
+    height:250px;
+    max-width:100%;
+	text-align:center;
 }
 
 .logo-pic {
     height:300px;
     position:relative;
-    left:150px;
+    /*left:150px;*/
 }
 
 
@@ -24,17 +22,16 @@
 /*以下是帖子列表部分*/
 
 .postList-field {
-    /*height:1000px;*/
-    width:900px;
+    height:900px;
+    max-width:900px;
     background-color:rgb(202, 171, 171);
     margin-top:10px;
-    margin-left:10px;
     float:left;
 
 }
 
 .postList-div-mark-field {
-    width:900px;
+    max-width:900px;
     height:50px;
     background-color:rgb(255, 255, 255);
     font-size:16px;
@@ -59,6 +56,8 @@
 .postList-div-post-field {
     clear:both;
     width:900px;
+    height:480px;
+    background-color:white;
 
 }
 
@@ -150,10 +149,9 @@
 
 .login-link-info-field {
     width:420px;
-    /*height:1000px;*/
+    height:900px;
     background-color:rgb(0, 148, 255);
     margin-top:10px;
-    margin-right:10px;
     float:right;
     
 }
@@ -275,6 +273,7 @@
     font-size:20px;
     position:relative;
     margin:20px;
+    
 }
 
 .chain-2 {
