--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -1,5 +1,5 @@
 
-
+<div id="container">
     <div class="logo-field">
         <img class="logo-pic" src="<?php echo BBS_WEB_TEMPLATE.'/';?>img/logo.gif" />
     </div>
