--- a/design/css/stylesheet-newSinglePost.css
+++ b/design/css/stylesheet-newSinglePost.css
@@ -1,11 +1,11 @@
-﻿body
+﻿#container
 {
-    width:1366;
+    width:1340px;
 }
 
 
 .post-head {
-    width:1349px;
+    width:100%;
     height:100px;
     background-color:rgb(245, 175, 65);
 
@@ -23,7 +23,6 @@
     height:1700px;
     float:left;
     position:relative;
-    left:10px;
     top:10px;
     background-color:rgb(0, 255, 255);
 }
@@ -35,7 +34,6 @@
     /*height:1700px;*/
     float:right;
     position:relative;
-    left:-10px;
     top:10px;
     background-color:rgb(210, 255, 210);
 
