--- a/src/include/template/css/stylesheet-infomation.css
+++ b/src/include/template/css/stylesheet-infomation.css
@@ -1,17 +1,16 @@
-body {
-    background-color:rgb(180,255,180);
-    height:700px;
-    width:1366px;
+#container{
+	background-color:rgb(180,255,180);
+	min-width:1000px;
+	height:700px;
 }
 
 
-
 .info-body-field {
-    height:600px;
-    width:1000px;
+	width:1000px;
+	margin:0px auto;
+    height:550px;
     background-color:white;
     position:relative;
-    left:170px;
     top:80px;
 }
 
@@ -79,7 +78,11 @@ body {
 
 
 .info-form-list {
-    margin:40px;
+    margin:30px;
+}
+
+.info-form-list-input {
+	width:200px;
 }
 
 
@@ -89,19 +92,8 @@ body {
     font-size:17px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.info-cancel {
+	position:relative;
+	top:-70px;
+	left:200px;
+}
