--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -1,7 +1,7 @@
 
     <div class="post-field">
-    	<b><?php echo $post_list[0]['Title']; ?></b>
-    	<div>由 <?php echo $post_list[0]['AuthorName'];?> 发布于 <?php echo $post_list[0]['Time'];?></div>
+    	<div class="post-title-field"><?php echo $post_list[0]['Title']; ?></div>
+    	<div class="post-time-field">由 <?php echo $post_list[0]['AuthorName'];?> 发布于 <?php echo $post_list[0]['Time'];?></div>
         <ul>
 			<li class="post-first-field">
 			<?php echo $post_list[0]['PostAdd']; ?>
