动态分页（初步）

--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -50,13 +50,16 @@
 
         <div class="turn-page">
             <ul>
-                <li class="page"><a href="?page=1">1</a></li>
-                <li class="page"><a href="?page=2">2</a></li>
-                <li class="page"><a href="?page=3">3</a></li>
-                <li class="page"><a href="?page=4">4</a></li>
-                <li class="page"><a href="">...</a></li>
-                <li class="page"><a href="?page=7">7</a></li>
-                <li class="page"><a href="?page=8">8</a></li>
+                
+                <?php
+					for($i=0;$i<count($page_link);$i++)
+					{
+						$temp=$page_link[$i];
+				?>
+				<li class="page"><a href="<?php echo $temp[1]; ?>"><?php echo $temp[0]; ?></a></li>
+				<?php
+					}
+				?>
             </ul>
         </div>
 
