--- a/design/css/stylesheet-newOpen.css
+++ b/design/css/stylesheet-newOpen.css
@@ -32,12 +32,10 @@
 
 .postList-div-mark-field {
     max-width:900px;
-    height:50px;
-    background-color:rgb(255, 255, 255);
+    height:50px;    
     font-size:16px;
+	background-color:rgb(0, 148, 255);
 }
-
-
 
 .postList-div-general-mark {
     height:50px;
@@ -49,8 +47,19 @@
     line-height:45px;
 }
 
-#mark-1 {
+.postList-div-general-mark:hover,.postList-div-general-mark.current{
+	background-color:rgb(202, 171, 171);
+}
+
+
+.postList-div-current-mark {
+	height:50px;
+    width:150px;
+    float:left;
     background-color:rgb(202, 171, 171);
+    text-align:center;
+    position:relative;
+    line-height:45px;
 }
 
 .postList-div-post-field {
