将系统反馈信息放到$sysMsg中统一显示

--- a/src/include/template/login_post.html
+++ b/src/include/template/login_post.html
@@ -47,5 +47,9 @@ if (!isset($_SESSION["SysID"])) {
 <?php
 }
 ?>
+        <div id="login-failed">
+            <span><?php echo $sysMsg['result'];?></span>
+            <a><span><?php echo $sysMsg['help'];?></span></a>
+        </div>
     </div>
 
