--- a/src/include/template/information.html
+++ b/src/include/template/information.html
@@ -41,6 +41,7 @@
 		<input type='hidden' name='action' value='' />
 		<input type='submit' value='返回' id='info-submit' />
 	    </form>
+	    <div id="info-sysMsg"><?php echo $sysMsg['result'];?></div>
         </div>
 <!-- info-field -->
         <div class="pic-info-field">
