--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="postList-post-right">
-                        <?php echo $post_list[$i-1]['FollowNum'];?> 回复
+                        <?php echo $post_list[$i-1]['FollowNum'];?> 个回复
                     </div>
 		</li>
 		<?php
