去除主页贴子列表中的序号 以及相关样式调整

--- a/design/css/stylesheet-newOpen.css
+++ b/design/css/stylesheet-newOpen.css
@@ -101,6 +101,10 @@
     margin:5px 20px 0px 5px
 }
 
+.postList-post-title {
+    font-size:large;
+}
+
 .postList-post-detail {
     margin:3px 0px 5px 20px;
     color:#AAAAAA;
