贴子内容页添加返回主页的链接

--- a/design/css/stylesheet-newSinglePost.css
+++ b/design/css/stylesheet-newSinglePost.css
@@ -43,6 +43,10 @@
     margin:0px 0px 20px 10px;
 }
 
+.post-section-name a{
+    display:inline;
+}
+
 .post-author-avatar {
     float:left;
     max-width:100px;
