--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -1,6 +1,6 @@
 
     <div class="post-field">
-        <div class="post-section-name">OPEN论坛 > 板块<?php echo $post_list[0]['SectionID']; ?></div>
+        <div class="post-section-name"><a href="<?php echo BBS_WEB_ROOT; ?>">OPEN论坛</a> > <a href="?section=<?php echo $post_list[0]['SectionID']; ?>">板块<?php echo $post_list[0]['SectionID']; ?></a></div>
         <div class="post-info">
             <img class="post-author-avatar" src="<?php echo $post_list[0]['AuthorAvatar']; ?>" />
             <div class="post-title-field"><?php echo $post_list[0]['Title']; ?></div>
