修正贴子标题过长导致的显示错误

--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -31,7 +31,10 @@
 		  <a target="_blank" href="<?php echo '?action=postView&PostID='.$post_list[$i-1][PostID];?>">
 		    第 <?php echo $i;?> 个帖子:
 		    <?php
-		      echo $post_list[$i-1]['Title'];
+                        if (mb_strlen($post_list[$i-1]['Title'])<75)
+                            echo $post_list[$i-1]['Title'];
+                        else
+                            echo mb_strcut($post_list[$i-1]['Title'],0,75).'...';
 		    ?>
 		    <i>由 <?php echo $post_list[$i-1]['AuthorName'];?> 发布于 <?php echo $post_list[$i-1]['Time'];?></i>
 		  </a>
